# EndfieldGachaPoolTable

./: GachaPoolTable.json  README.md  main.py  pyproject.toml  sync_tablecfg.py
.github/: tablecfg-sync-state.json
.github/workflows/: sync-tablecfg.yml  update-gacha.yml
TableCfg/: GachaCharPoolTable.json  GachaWeaponPoolTable.json
raw/: special_1_4_1.json  weaponbox_constant_1.json  weaponbox_constant_2.json  weaponbox_constant_3.json  weaponbox_constant_4.json  weaponbox_constant_5.json  weponbox_1_0_2.json  weponbox_1_0_3.json  weponbox_1_1_1.json  weponbox_1_4_1.json
tests/: test_main_joint_pool.py  test_sync_tablecfg.py  test_workflow_config.py
